--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,8 +1,12 @@
-version: '3.8'
+# ============================================
+# Attestations SCN - Docker Compose Production
+# ============================================
 
 services:
+  # Application Next.js
   app:
     container_name: attestations-app
+    image: attestations-scn:latest
     build:
       context: .
       dockerfile: Dockerfile
@@ -14,44 +18,117 @@ services:
       - DATABASE_URL=${DATABASE_URL}
       - NEXTAUTH_URL=${NEXTAUTH_URL}
       - NEXTAUTH_SECRET=${NEXTAUTH_SECRET}
-      - REDIS_URL=${REDIS_URL}
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - REDIS_PASSWORD=${REDIS_PASSWORD:-}
       - UPLOAD_DIR=/app/uploads
-      # Autres variables d'environnement à injecter via .env
+      # Notifications
+      - SMTP_HOST=${SMTP_HOST:-}
+      - SMTP_PORT=${SMTP_PORT:-587}
+      - SMTP_USER=${SMTP_USER:-}
+      - SMTP_PASS=${SMTP_PASS:-}
+      - TWILIO_ACCOUNT_SID=${TWILIO_ACCOUNT_SID:-}
+      - TWILIO_AUTH_TOKEN=${TWILIO_AUTH_TOKEN:-}
+      - TWILIO_PHONE_NUMBER=${TWILIO_PHONE_NUMBER:-}
+      - WHATSAPP_PHONE_NUMBER_ID=${WHATSAPP_PHONE_NUMBER_ID:-}
+      - WHATSAPP_ACCESS_TOKEN=${WHATSAPP_ACCESS_TOKEN:-}
     depends_on:
-      - db
-      - redis
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     volumes:
-      - ./uploads:/app/uploads
+      - uploads_data:/app/uploads
+      - attestations_data:/app/public/attestations
+      - arretes_data:/app/public/arretes
+    networks:
+      - attestations-network
     deploy:
       resources:
         limits:
-          cpus: '0.50'
+          cpus: '1.0'
+          memory: 1024M
+        reservations:
+          cpus: '0.5'
           memory: 512M
 
+  # Base de données PostgreSQL
   db:
     container_name: attestations-db
     image: postgres:15-alpine
     restart: always
     environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB:-attestations_db}
     volumes:
-      - postgres_data_prod:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
+      - ./scripts/backup:/backup
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres}" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - attestations-network
     deploy:
       resources:
         limits:
-          cpus: '0.50'
+          cpus: '0.5'
           memory: 512M
 
+  # Redis pour les queues et le cache
   redis:
     container_name: attestations-redis
     image: redis:7-alpine
     restart: always
+    command: >
+      redis-server --appendonly yes --save 60 1 --loglevel warning ${REDIS_PASSWORD:+--requirepass ${REDIS_PASSWORD}}
     volumes:
-      - redis_data_prod:/data
-    command: redis-server --save 60 1 --loglevel warning
+      - redis_data:/data
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - attestations-network
+    deploy:
+      resources:
+        limits:
+          cpus: '0.25'
+          memory: 256M
+
+  # Nginx reverse proxy (optionnel)
+  nginx:
+    container_name: attestations-nginx
+    image: nginx:alpine
+    restart: always
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/ssl:/etc/nginx/ssl:ro
+    depends_on:
+      - app
+    networks:
+      - attestations-network
+    profiles:
+      - with-nginx
 
 volumes:
-  postgres_data_prod:
-  redis_data_prod:
+  postgres_data:
+    driver: local
+  redis_data:
+    driver: local
+  uploads_data:
+    driver: local
+  attestations_data:
+    driver: local
+  arretes_data:
+    driver: local
+
+networks:
+  attestations-network:
+    driver: bridge
