--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@auth/prisma-adapter": "^2.11.1",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.19.2",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -39,7 +40,6 @@
     "@radix-ui/react-toast": "^1.2.15",
     "@types/nodemailer": "^7.0.5",
     "@types/react-pdf": "^6.2.0",
-    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
     "bullmq": "^5.66.5",
     "class-variance-authority": "^0.7.1",
@@ -74,9 +74,7 @@
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
-    "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^2.4.6",
-    "@types/bull": "^3.15.9",
     "@types/multer": "^2.0.0",
     "@types/node": "^20",
     "@types/qrcode": "^1.5.6",
