--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:headed": "playwright test --headed",
-    "test:all": "npm run test:unit && npm run test:integration && npm run test:e2e"
+    "test:all": "npm run test:unit && npm run test:integration && npm run test:e2e",
+    "check-env": "tsx scripts/check-env.ts",
+    "audit:2fa": "tsx scripts/security-audit-2fa.ts",
+    "audit:qrcode": "tsx scripts/security-audit-qrcode.ts",
+    "audit:security": "npm run audit:2fa && npm run audit:qrcode",
+    "test:rate-limit": "tsx scripts/test-rate-limit.ts"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
@@ -52,6 +57,7 @@
     "next": "16.1.1",
     "next-auth": "^5.0.0-beta.30",
     "nodemailer": "^7.0.12",
+    "otplib": "^13.1.1",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^2.4.5",
     "pdfjs-dist": "^5.4.530",
@@ -81,6 +87,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^4.7.0",
+    "@vitest/coverage-v8": "^4.0.17",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "happy-dom": "^20.1.0",
