feat: add standalone asset copying script for Next.js
feat: implement 2FA security page for user profile with email and TOTP options

feat: create API route for checking account status before login with detailed error messages

feat: add API route to change preferred 2FA method for users

feat: implement API route to serve uploaded files with proper MIME types

feat: create SidebarContext for managing sidebar state in the application

feat: add custom RadioGroup component for better UI consistency

feat: implement instrumentation for environment variable checks at server startup

feat: add utility functions for handling project paths and base URL retrieval

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -83,7 +83,7 @@ services:
     container_name: attestations-redis
     image: redis:7-alpine
     restart: always
-    command: ["redis-server", "--appendonly", "yes", "--save", "60", "1", "--loglevel", "warning"]
+    command: redis-server --appendonly yes --save 60 1 --loglevel warning
     volumes:
       - redis_data:/data
     healthcheck:
