--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "build": "next build && npm run postbuild",
+    "build:only": "next build",
+    "postbuild": "node scripts/copy-standalone-assets.js",
+    "start": "node .next/standalone/server.js",
+    "start:next": "next start",
     "lint": "eslint",
     "worker": "tsx src/worker.ts",
     "test": "vitest",
@@ -40,6 +43,7 @@
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-switch": "^1.2.6",
